# proxy-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  canister_ids.json  dfx.json  juno.json
.github/workflows/: build.yml  (+3 more)
candid/: canister.did  proxy.did
scripts/: build.sh  generate.sh  propose_upgrade.sh  propose_upgrade_prod.sh
src/: lib.rs
src/canister/: Cargo.toml  notification-sanity-check.md
src/canister/src/: lib.rs  migration.rs
src/canister/src/calls/: boost_calls.rs  event_calls.rs  generic_calls.rs  group_calls.rs  history_calls.rs  id_calls.rs  log_calls.rs  mod.rs  notification_calls.rs  profile_calls.rs  report_calls.rs  reward_calls.rs  stats_calls.rs  topic_calls.rs  topics_calls.rs  websocket_calls.rs
src/canister/src/entities/: event.rs  group.rs  member.rs  mod.rs  profile.rs
src/canister/src/helpers/: auth_helper.rs  group_permission.rs  guards.rs  mod.rs  str.rs  token_balance.rs  validation.rs  validator.rs
src/canister/src/logic/: attendee_logic.rs  boost_logic.rs  event_logic.rs  friend_request_logic.rs  group_logic.rs  history_event_logic.rs  ledger_logic.rs  logger_logic.rs  member_logic.rs  mod.rs  notification_logic.rs  profile_logic.rs  report_logic.rs  reward_buffer_logic.rs  topic_logic.rs  topics_logic.rs  websocket_logic.rs
src/canister/src/methods/: boost_methods.rs  event_methods.rs  group_methods.rs  mod.rs  profile_methods.rs  report_methods.rs
src/canister/src/migration/: call_wrappers.rs  migrate.rs  mod.rs  principals.rs  read_stores.rs  sanity_check.rs  transform_models.rs
src/canister/src/migration/old_models/: attendee_model.rs  boost_model.rs  event_models.rs  invite_model.rs  member_model.rs  notifications_models.rs  profile_models.rs
src/canister/src/misc/: identifier_misc.rs  mod.rs  role_misc.rs
src/canister/src/models/: api_error.rs  attendee.rs  date_range.rs  document_details.rs  event.rs  filter_type.rs  friend_request.rs  group.rs  identifier.rs  invite.rs  member.rs  mod.rs  paged_response.rs  profile.rs  profile_privacy.rs  report.rs  role.rs  sort_direction.rs  wallet.rs
src/canister/src/storage/: attendee_storage.rs  boosted_storage.rs  cell_api.rs  event_attendees_storage.rs  event_storage.rs  event_storage_api.rs  friend_request_storage.rs  group_events_storage.rs  group_members_storage.rs  group_storage.rs  group_storage_api.rs  history_point_storage.rs  id_storage.rs  logger_storage.rs  member_storage.rs  mod.rs  notification_storage.rs  profile_storage.rs  profile_storage_api.rs  report_storage.rs  report_storage_api.rs  reward_storage.rs  storage_api.rs  topic_storage.rs  topics_storage.rs  unread_notification_storage.rs  user_notification_storage.rs
src/canister/src/stores/: event_store.rs  group_store.rs  main_store.rs  memory_store.rs  profile_store.rs  report_store.rs
src/canister_types/: Cargo.toml
src/canister_types/src/: lib.rs
src/canister_types/src/models/: api_error.rs  application_role.rs  asset.rs  attendee.rs  boosted.rs  date_range.rs  document_details.rs  event.rs  event_collection.rs  filter_type.rs  friend_request.rs  group.rs  history_event.rs  http_types.rs  identifier.rs  invite_type.rs  location.rs  log.rs  logger.rs  member.rs  member_collection.rs  mod.rs  multisig.rs  notification.rs  paged_response.rs  permission.rs  privacy.rs  profile.rs  profile_privacy.rs  relation_type.rs  report.rs  reward.rs  role.rs  sort_direction.rs  storage.rs  subject.rs  topic.rs  topics.rs  transaction_data.rs  unread_count.rs  (+4 more)
src/canister_types/src/models/history_event/: group_role_changed.rs  history_event_kind.rs  mod.rs
src/proxy/: Cargo.toml
src/proxy/src/: lib.rs
src/proxy/src/calls/: boost_calls.rs  canister_calls.rs  event_calls.rs  generic_calls.rs  group_calls.rs  history_calls.rs  log_calls.rs  mod.rs  notification_calls.rs  profile_calls.rs  report_calls.rs  reward_calls.rs  stats_calls.rs  topic_calls.rs  websocket_calls.rs
src/proxy/src/helpers/: group_permission.rs  guards.rs  token_balance.rs
src/proxy/src/logic/: attendee_logic.rs  boost_logic.rs  event_logic.rs  friend_request_logic.rs  group_logic.rs  history_event_logic.rs  id_logic.rs  ledger_logic.rs  logger_logic.rs  member_logic.rs  mod.rs  notification_logic.rs  profile_logic.rs  report_logic.rs  reward_buffer_logic.rs  topic_logic.rs  websocket_logic.rs
src/proxy/src/migration/: call_wrappers.rs  migration.md  principals.rs  sanity_check.rs
src/proxy/src/migration/old_models/: attendee_model.rs  group_model.rs  invite_model.rs  member_model.rs  mod.rs  notifications_models.rs  profile_models.rs
src/proxy/src/storage/: attendee_storage.rs  boosted_storage.rs  cells.rs  event_attendees_storage.rs  event_storage.rs  friend_request_storage.rs  global_storage.rs  group_events_storage.rs  group_members_storage.rs  group_storage.rs  history_canister_storage.rs  id_storage.rs  logger_storage.rs  member_storage.rs  mod.rs  notification_storage.rs  profile_storage.rs  report_storage.rs  reward_storage.rs  storage_api.rs  topic_storage.rs  user_notification_storage.rs
src/test/: Cargo.toml  readme.md
src/test/src/: boost_calls.rs  event_calls.rs  flow1.rs  flow2.rs  identity.pem  lib.rs  mock_ids.rs  mock_models.rs
src/test/src/calls/: boost_calls.rs  event_calls.rs  group_calls.rs  mod.rs  profile_calls.rs  report_calls.rs
src/test/src/mocks/: identity2.pem  mod.rs  models.rs  principals.rs
(+37 files in other folders)
