[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
candid = "0.10"
serde = "1.0"
serde_json = "1.0"

ic-cdk = "0.15"
ic-ledger-types = "0.12"
ic-stable-structures = "0.6"
ic-websocket-cdk = "0.4"
ic-cdk-timers = "0.9"

catalyze-shared = { git = "https://github.com/Catalyze-Software/catalyze-shared", branch = "feat/profile-completion" }

[profile.release]
lto = true
opt-level = 'z'
