[package]
name = "canister"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk =  {workspace = true}
ic-stable-structures =  {workspace = true}
serde =  {workspace = true}
serde_json =  {workspace = true}
ic-ledger-types =  {workspace = true}

ic-websocket-cdk = "0.3"
ic-cdk-timers = "0.6"
email_address = "0.2"
unicode-segmentation = "1"
canister_types = { path = "../canister_types" }
