[package]
name = "canister_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
candid = "0.10.2"
serde = "1.0"
serde_json = "1.0"
ic-ledger-types = "0.9.0"
ic-cdk = "0.12.0"
ic-stable-structures = "0.6.1"

email_address = "0.2.4"
