[package]
name = "proxy"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk =  {workspace = true}
ic-stable-structures =  {workspace = true}
serde =  {workspace = true}
serde_json =  {workspace = true}
ic-ledger-types =  {workspace = true}

ic-websocket-cdk = "0.3"
ic-cdk-timers = "0.6"
catalyze-shared = { git = "https://github.com/Catalyze-Software/catalyze-shared" }
