[package]
name = "proxy"
version = "0.2.4"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
ic-websocket-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }

catalyze-shared = { workspace = true }
