[package]
name = "test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.0"
pocket-ic = "2.1.0"

canister_types = { path = "../canister_types"}
lazy_static = "1.4.0"
ic-agent = "0.33.0"
